# dnf-purge-command

./: .gitignore  README.md  install.sh  project.spec  purge-command.cpp  the-purge.py  uninstall.sh  wrapper.sh
completions/: _dnf_purge  _purge  _purge-command  dnf_purge.fish  purge.bash  purge.fish
template/: CMakeLists.txt  arguments.hpp  main.cpp  template.cpp  template.hpp
